@@ -4,3 +4,8 @@ http://www.cnmat.berkeley.edu/OpenSoundControl/ for details).
 Examples of use can be found in src/testlo.c
 
 Steve Harris  2004-02-29  steve@plugin.org.uk
+
+NOTICE FOR MAC OS X:
+Mac OS X defaults to ipv6 but most of the currently available OSC applications
+like Pd and SuperCollider don't listen on ipv6 sockets. for now it's saver to
+turn off ipv6 support in liblo (using ./configure --disable-ipv6).
